// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  background: #419be0;
  color: #333;
  height: 450px;
  margin: 0 auto;
  padding: 40px;
}

@media (max-width:992px) {
  .c0 {
    height: 410px;
  }
}

@media (max-width:768px) {
  .c0 {
    height: 350px;
  }
}

@media (max-width:572px) {
  .c0 {
    height: 310px;
  }
}

@media (max-width:376px) {
  .c0 {
    height: 300px;
  }
}

<div
  className="c0"
/>
`;

exports[`it works 2`] = `
.c0 {
  color: rgba(44,44,44,0.75);
  display: none;
  font-weight: bold;
}

@media (max-width:572px) {
  .c0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    -webkit-box-pack: right;
    -webkit-justify-content: right;
    -ms-flex-pack: right;
    justify-content: right;
    margin-left: auto;
  }
}

<div
  className="c0"
/>
`;

exports[`it works 3`] = `
.c0 .slick-initialized.slick-slider {
  height: 450px;
}

@media (max-width:992px) {
  .c0 .slick-initialized.slick-slider {
    height: 410px;
  }
}

@media (max-width:768px) {
  .c0 .slick-initialized.slick-slider {
    height: 360px;
  }
}

@media (max-width:572px) {
  .c0 .slick-initialized.slick-slider {
    height: 305px;
  }
}

@media (max-width:376px) {
  .c0 .slick-initialized.slick-slider {
    height: 325px;
  }
}

<div
  className="c0"
/>
`;

exports[`it works 4`] = `
.c0 {
  background-color: rgba(255,255,255,.25);
  color: black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 150px;
  position: relative;
  top: -10em;
  width: 100%;
}

@media (max-width:572px) {
  .c0 {
    height: 100px;
    top: -7em;
  }
}

<div
  className="c0"
/>
`;

exports[`it works 5`] = `
.c0 {
  height: 450px;
  width: 100%;
}

@media (max-width:992px) {
  .c0 {
    height: 400px;
  }
}

@media (max-width:768px) {
  .c0 {
    height: 350px;
  }
}

@media (max-width:572px) {
  .c0 {
    height: 300px;
  }
}

<img
  className="c0"
/>
`;

exports[`it works 6`] = `
.c0 {
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 1em;
  font-size: 1.5em;
  font-weight: bold;
}

@media (max-width:572px) {
  .c0 {
    font-size: 1em;
  }
}

<div
  className="c0"
/>
`;

exports[`it works 7`] = `
.c0 {
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 1em;
}

@media (max-width:572px) {
  .c0 {
    display: none;
  }
}

<div
  className="c0"
/>
`;
